# banim

./: .gitignore  README.md  banimcam.py  canim.c  canim.cpp  canim.h  canimModule.c  danim.cpp  intro.py  meson.build  pyanim.py  setup.py  sharedTools.py  the test.py  threanim.cpp
bobTheBuilder/: HelloWorldTest.py  runsetup.py  setup.py
subprojects/: cairo.wrap
